k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wavescreen-service
  namespace: wavescreen
spec:
  selector:
    app: wavescreen
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
