k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wavescreen-ingress
  namespace: wavescreen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - wavescreen.germainleignel.com
    secretName: wavescreen-tls
  rules:
  - host: wavescreen.germainleignel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wavescreen-service
            port:
              number: 3000
